--- a/.github/workflows/update-shermanslagoon.yml
+++ b/.github/workflows/update-shermanslagoon.yml
@@ -3,7 +3,7 @@ name: Generate and Deploy Shermans Lagoon Feed
 
 on:
   schedule:
-    - cron: '0 7 * * 1'
+    - cron: '0 7 * * *'
   workflow_dispatch:
 
 permissions:
